test req 2 y 3, openapi
